external-crates/move/crates/move-compiler/tests/move_check/parser/unknown_ability_name_modifier.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/unknown_ability_name_modifier.move:4:20
  │
4 │     struct Foo has blah {}
  │                    ^^^^ Unexpected 'blah'. Expected a type ability, one of: 'copy', 'drop', 'store', or 'key'
